--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,25 @@
 * text=auto !eol
+lddi.bluetooth/dll/unix/ASL2.0.txt -text
+lddi.bluetooth/dll/unix/NOTICE.txt -text
+lddi.bluetooth/dll/unix/universAAL_continua_HDP_manager.c -text
+lddi.bluetooth/dll/unix/universAAL_continua_HDP_manager.h -text
+lddi.bluetooth/dll/unix/unix_32/ASL2.0.txt -text
+lddi.bluetooth/dll/unix/unix_32/NOTICE.txt -text
+lddi.bluetooth/dll/unix/unix_32/libHDPnative_unix_32.so.zip -text
+lddi.bluetooth/dll/unix/unix_64/ASL2.0.txt -text
+lddi.bluetooth/dll/unix/unix_64/NOTICE.txt -text
+lddi.bluetooth/dll/unix/unix_64/libHDPnative_unix_64.so.zip -text
+lddi.bluetooth/dll/windows/ASL2.0.txt -text
+lddi.bluetooth/dll/windows/HDPNativeDll.cpp -text
+lddi.bluetooth/dll/windows/HDPNativeDll.h -text
+lddi.bluetooth/dll/windows/HDPNativeDll.vcxproj -text
+lddi.bluetooth/dll/windows/HDPNativeDll.vcxproj.filters -text
+lddi.bluetooth/dll/windows/HDPNativeDll.vcxproj.user -text
+lddi.bluetooth/dll/windows/NOTICE.txt -text
+lddi.bluetooth/dll/windows/x86_32/ASL2.0.txt -text
+lddi.bluetooth/dll/windows/x86_32/NOTICE.txt -text
+lddi.bluetooth/dll/windows/x86_32/hdpNativeLib_win_x86_32.dll -text
+lddi.bluetooth/dll/windows/x86_64/README.txt -text
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/ASL2.0.txt -text
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/META-INF/MANIFEST.MF -text
 lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/NOTICE.txt -text
