--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -14,6 +14,12 @@
   <name>universAAL LDDI Suite</name>
   <description>The set of artefacts realizing the universAAL Local Device Discovery and Integration</description>
   <inceptionYear>2010</inceptionYear>
+	<distributionManagement>
+		<site>
+			<id>depot.universaal.org</id>
+			<url>${uaal.site.url}lddi/lddi.pom</url>
+		</site>
+	</distributionManagement>
   <modules>
     <module>../lddi.bluetooth/lddi.pom.bluetooth</module>
     <module>../lddi.common/lddi.pom.common</module>
