--- a/lddi.pom/lddi.karaf.feature/pom.xml
+++ b/lddi.pom/lddi.karaf.feature/pom.xml
@@ -163,6 +163,10 @@
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.zigbee.exporter</artifactId>
       </dependency>		
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.zigbee.commissioning.adapter</artifactId>
+      </dependency>			  
   </dependencies>
   <build>
     <filters>
